Fixes for PL-134, spacing

--- a/source/css/scss/patterns/02-molecules/_profile-teaser.scss
+++ b/source/css/scss/patterns/02-molecules/_profile-teaser.scss
@@ -24,6 +24,7 @@
       clear: none;
       padding-top: 15px;
       p {
+        overflow: hidden;
         font-size: 15px;
       }
     }
